
Version 2.1-8 (opened November 19, 2011)

	* betadisper: failed with an error in internal function
	betadisper() if there were empty levels. This could happen when
	'groups' was a factor with empty levels, and was reported in 
	https://stat.ethz.ch/pipermail/r-sig-ecology/2011-November/002525.html
	The behaviour is now corrected in ordimedian() which will return NA
	for empty factor levels. 
	
	* rarecurve: new function to draw rarefaction curves for each
	plot, optionally with sample size vertical and corresponding
	horizontal richness lines. Soil microbiologists with sequencing
	data seem to want these, and I have seen them used elsewhere as
	well. 
	
Version 2.1-7 (closed November 19, 2011)

	* adonis: speed up implemented in r1636 was not passing the
	transposed matrices to internal f.test function. Reported by
	Nicholas Lewin-Koh.

	* metaMDS: arguments 'noshare = 0' and 'noshare = FALSE' are now
	different: zero is taken as the numeric threshold and always
	triggers stepacross(), whereas FALSE is logical and never triggers
	stepacross.

	* vegan 2.0-2 was released on November 15, based on this version.

Version 2.1-6 (closed November 12, 2011)

	* FAQ: correct mark-up of hyper links (@uref{} instead of @url{}),
	add new entries on RDA scaling, scaling of NMDS stress and scaling
	of environmental arrows in cca/rda/capscale/envfit, plus some
	minor updates of old entries.

	* ordiarrows, ordisegments: gained argument 'order.by' that can be
	used to order the points within groups before drawing the arrows
	or segments. This message in R-sig-ecology seems to need this: 
	https://stat.ethz.ch/pipermail/r-sig-ecology/2011-November/002464.html

	* ordispider: returns invisibly the coordinates to which each
	point is connected. Triggered by an email query of this
	functionality. 

	* ordiplot3d: expanded example to show how to use xyz.convert() to
	add points as per
	https://stat.ethz.ch/pipermail/r-help/2011-October/293955.html
