@@ -13,7 +13,7 @@ estaccumR, estimateR, eventstar, factorfit, fisherfit, fitspecaccum,
 goodness, hiersimu, humpfit, indpower, inertcomp, initMDS,
 intersetcor, isomapdist, isomap, linestack, mantel, meandist,
 metaMDSdist, metaMDSiter, metaMDSredist, MDSrotate, metaMDS, monoMDS,
-mrpp, msoplot, mso, multipart, make.commsim, nestedchecker,
+mrpp, msoplot, mso, multipart, make.commsim, nestedbetajac, nestedbetasor, nestedchecker,
 nesteddisc, nestedn0, nestednodf, nestedtemp, nullmodel, oecosimu,
 ordiR2step, ordiarrows, ordicloud, ordicluster, ordiellipse, ordigrid,
 ordihull, ordilabel, ordiplot3d, ordiplot, ordipointlabel, ordiresids,
